@@ -4,6 +4,7 @@
 - XRANGE command UI handling 
 - Support streams type
 - Keys displaying strategy
+- Clone connection functionality
 
 1.11.0 / November 26, 2017
 [Alexandr Topilski]
