@@ -7,6 +7,7 @@
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/add.png</file>
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/remove.png</file>
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/edit.png</file>
+    <file>@PROJECT_NAME_LOWERCASE@/images/64x64/clone.png</file>
 
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/execute.png</file>
     <file>@PROJECT_NAME_LOWERCASE@/images/64x64/stop.png</file>
