@@ -36,6 +36,7 @@ const QString trAddConnection = QObject::tr("Add connnection");
 const QString trAddClusterConnection = QObject::tr("Add cluster connnection");
 const QString trAddSentinelConnection = QObject::tr("Add sentinel connnection");
 const QString trRemoveConnection = QObject::tr("Remove connnection");
+const QString trCloneConnection = QObject::tr("Clone connnection");
 const QString trEditConnection = QObject::tr("Edit connection");
 const QString trOpen = QObject::tr("Open");
 const QString trMenu = QObject::tr("Menu");
